--- a/src/Bowling.Tests/Bowling.Tests/Bowling.Tests.csproj
+++ b/src/Bowling.Tests/Bowling.Tests/Bowling.Tests.csproj
@@ -19,6 +19,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="AutoFixture" Version="4.17.0" />
+    <PackageReference Include="FakeItEasy" Version="7.0.2" />
+    <PackageReference Include="FluentAssertions" Version="6.2.0" />
   </ItemGroup>
 
 </Project>
