--- a/src/Bowling.Presentation/Bowling.API/appsettings.json
+++ b/src/Bowling.Presentation/Bowling.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQL":"Server=localhost\\SQLEXPRESS;Database=bowling;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
